# upgraded-octo-fortnight

./: .gitignore  .vercelignore  API_KEYS_REQUIRED.txt  API_SECURITY_GUIDE.md  API_USAGE_GUIDE.md  ARCHIVE_FILE_LOCATION.md  CHECK_RUNTIME_LOGS.md  COMPLETE_TEST_SUMMARY.md  ENV_SETUP_GUIDE.md  FINAL_TEST_SUMMARY.md  FINE_GRAINED_TOKEN_GUIDE.md  GITHUB_ACTIONS_DEPLOYMENT.md  HOW_TO_VIEW_LOGS.md  MANUAL_ARCHIVE_TEST.md  README.md  SUCCESS_REPORT.md  TESTING_STATUS.md  TEST_REPORT.md  TEST_RESULTS.md  VERCEL_CONFIG_FIX.md  VERCEL_DEPLOYMENT_FIXED.md  VERCEL_DEPLOY_GUIDE.md  VERCEL_DEPLOY_HOOK_FIX.md  VERCEL_FIX_README.md  VERCEL_QUICK_START.md  diagnose_vercel.py  fly.toml  main.py  mcp-server.json  pyproject.toml  railway.json  render.yaml  requirements.min.txt  requirements.txt  run.sh  server.py  test_all_plans.py  test_api_scenarios.py  test_features.py  test_news_search.py  (+7 more)
.github/: FILE_ORGANIZATION.md
.github/workflows/: README.md  daily-archive.yml  deploy-python-app.yml  test.yml  vercel-deploy-no-secrets.yml  vercel-deploy.yml  vercel-simple-deploy.yml  vercel-simple-test.yml
api/: archive.py  auth.py  auto_archive.py  download.py  health.py  index.py  manage_categories.py  optimize_keywords.py  register.py  search.py  simple_test.py  test.py  test_handler.py  upgrade.py
docs/: DOCUMENTATION_TREE.txt  ORGANIZE_PLAN.md  README.md  SEARCH_ENGINE_INTEGRATION.md
docs/api/: API_USAGE_GUIDE.md  (+5 more)
examples/: github-actions-example.yml  javascript-example.js  python-example.py  setup_auth.py
tests/: README.md  diagnose_vercel.py  run_all_tests.py  test_all.py
(+211 files in other folders)
